--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Contraseñas</title>
+    <title>Silly Password Maker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Generador de Contraseñas</h1>
+        <h1>Silly Password Maker</h1>
         <button id="generate">Generar Contraseña</button>
         <input type="text" id="password" readonly>
     </div>
